--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 				<h3 id="1" class="title">Video 1: high agreeableness
 				</h3>
 				<div class="video">
-					<iframe src="//player.bilibili.com/player.html?isOutside=true&aid=112912878338863&bvid=BV1wnYKe8EjP&cid=500001639855837&p=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"></iframe>
+					<iframe src="//player.bilibili.com/player.html?isOutside=true&aid=112912878338863&bvid=BV1wnYKe8EjP&cid=500001639855837&p=1&autoplay=0" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"></iframe>
 
 			
 				</div>
@@ -161,7 +161,7 @@
 
 				</h3>
 				<div class="video">
-					<iframe src="//player.bilibili.com/player.html?isOutside=true&aid=112912878276560&bvid=BV16nYKebEUu&cid=500001639857432&p=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"></iframe>
+					<iframe src="//player.bilibili.com/player.html?isOutside=true&aid=112912878276560&bvid=BV16nYKebEUu&cid=500001639857432&p=1&autoplay=0" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"></iframe>
 
 			
 				</div>
@@ -179,19 +179,16 @@
 				</div>	
 				 
 
-
-
 				<h3 id="3" class="title">Video 3: low agreeableness
 
 				</h3>
 				<div class="video">
-					<iframe src="//player.bilibili.com/player.html?isOutside=true&aid=112912878276452&bvid=BV16nYKebEQL&cid=500001639856634&p=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"></iframe>
+					<iframe src="//player.bilibili.com/player.html?isOutside=true&aid=112912878276452&bvid=BV16nYKebEQL&cid=500001639856634&p=1&autoplay=0" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"></iframe>
 
-			
 				</div>
 				</div>
  
-				<h3 id="3">  
+				<h3 id="4">  
 				</h3>
 				<div class="uk-grid-small" uk-grid>
 					<div class="uk-width-1-1" uk-lightbox="animation: slide">
@@ -204,6 +201,7 @@
 				 
 
 
+		
 
 
  
