--- a/index.html
+++ b/index.html
@@ -90,8 +90,9 @@
         }
         </style>
 
-        <div class="large-title" style="font-size: 41px">
-            Inverted-U Sales Effect of Agreeableness: <br> Modelling Attractiveness Using MMML
+        <div class="large-title">
+            <p style="font-size: 48px;text-align: center;">Inverted-U Sales Effect of Agreeableness: </p>
+            <p style="font-size: 48px;text-align: center;">Modelling Attractiveness Using MMML</p>
 
         </div>
 
@@ -103,11 +104,8 @@
             font-size: 26px;
         }
         </style>
-        <div class="large-title" style="font-size: 36px">
-
-            Multimedia Appendices
-
-
+        <div class="large-title">
+            <p style="margin: 0px 0; text-align: center;font-size: 30px;">Multimedia Appendices</p>
         </div>
 
         <div class="uk-grid-small" uk-grid>
@@ -202,6 +200,9 @@
         </div>
 
 
-        <a href="" uk-totop class="totop" uk-scroll><span uk-icon="top"></span></a>
+
+    </div>
+</div>
+<a href="" uk-totop class="totop" uk-scroll><span uk-icon="top"></span></a>
 </body>
 </html>
