--- a/index.html
+++ b/index.html
@@ -1,143 +1,111 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-<head>
-    <title> Inverted-U Sales Effect of Agreeableness: <br> Modelling Attractiveness Using MMML
-
-    </title>
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <meta name="keywords" content="">
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/uikit.min.css"/>
-    <link rel="stylesheet" href="css/main.css"/>
-    <script src="js/uikit.min.js"></script>
-    <script src="js/jquery.min.js"></script>
-    <script src="js/uikit-icons.min.js"></script>
-    <script src="js/script.js"></script>
-
-
-    <style>
+	<head>
+		<title>Inverted-U Sales Effect of Agreeableness: </p>
+			A Field Experiment with Custom LLM
+</title>
+		<meta name="description" content="">
+		<meta name="author" content="">
+		<meta name="keywords" content="">
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" href="css/uikit.min.css" />
+		<link rel="stylesheet" href="css/main.css" />
+		<script src="js/uikit.min.js"></script>
+		<script src="js/jquery.min.js"></script>
+		<script src="js/uikit-icons.min.js"></script>
+        <script src="js/script.js"></script>
 
 
-        .nav {
-            display: -webkit-box;
-            display: -ms-flexbox;
-            display: flex;
-            display: -ms-flexbox;
-            display: flex;
-            -ms-flex-wrap: wrap;
-            flex-wrap: wrap;
-            padding-left: 0;
-            margin-bottom: 0;
-            list-style: none;
-            width: 100%;
-            justify-content: center;
-            margin-top: 60px;
-        }
-
-        .nav-link {
-            display: block;
-            text-align: center;
-            padding: 0.5rem 3rem;
-            color: #007bff;
-            text-decoration: none;
-            background-color: transparent;
-            -webkit-text-decoration-skip: objects;
-        }
-
-        .nav-link:hover {
-            text-decoration: none;
-            color: #0056b3;
-        }
-
-    </style>
+<style>
 
 
-</head>
 
-<body oncontextmenu=self.event.returnValue=false>
+.nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    padding-left: 0;
+    margin-bottom: 0;
+    list-style: none;
+    width: 100%;
+    justify-content: center;
+	margin-top: 60px;
+}
+.nav-link {
+    display: block;
+	text-align: center;
+    padding: 0.5rem 3rem;
+	color: #007bff;
+    text-decoration: none;
+    background-color: transparent;
+    -webkit-text-decoration-skip: objects;
+}
+.nav-link:hover{   
+	text-decoration: none;
+	 color: #0056b3;
+	}
 
-<nav class="uk-navbar-container uk-margin" uk-navbar uk-sticky>
-    <div class="uk-navbar-left">
-        <a href="#offcanvas-slide" uk-icon="icon: menu" uk-toggle></a>
 
-        <div id="offcanvas-slide" uk-offcanvas="mode: push">
-            <div class="uk-offcanvas-bar">
+	@media screen and (max-width: 768px) {
+		.large-title{
+	
+   }
+   .large-title p:nth-child(1){
+	font-size: 26px!important;
+	
+}
+.large-title p:nth-child(2){
+	font-size: 20px!important;
+}
+.mobile{
+	flex-direction: column;
+}
 
-                <ul class="uk-nav uk-nav-default">
-                    <li class="uk-nav-header"><a href="#1" uk-scroll><b>Video 1: high agreeableness
-                    </b></a></li>
-                    <li class="uk-nav-header"><a href="#2" uk-scroll><b>Video 2: middle agreeableness
-                    </b></a></li>
-                    <li class="uk-nav-header"><a href="#3" uk-scroll><b>Video 3: low agreeableness
-                    </b></a></li>
+.uk-width-1-2 {
+    width: 100%!important;
+}
+.container{
+	margin: 0!important;
+}
+}
 
-                </ul>
-
-            </div>
-        </div>
-    </div>
+</style>
 
 
-</nav>
+		</head>
+
+	<body oncontextmenu=self.event.returnValue=false>
+
+		<nav class="uk-navbar-container uk-margin" uk-navbar uk-sticky>
+
+		    
+		</nav>
 
 
 <div class="banner" style="background-color:#f5f5f5;padding-bottom:26px">
-    <div class="uk-container uk-container-center container">
-        <style>.large-title {
-            font-size: 26px;
-        }
-        </style>
+	<div class="uk-container uk-container-center container">
+		<style>.large-title {font-size: 26px;}
+		</style>
 
-        <div class="large-title">
-            <p style="font-size: 48px;text-align: center;">Inverted-U Sales Effect of Agreeableness: </p>
-            <p style="font-size: 48px;text-align: center;">Modelling Attractiveness Using MMML</p>
+		<div class="large-title">
+				 <p style="font-size: 48px;text-align: center;">Inverted-U Sales Effect of Agreeableness: </p>
+				 <p style="margin: 0px 0; text-align: center;font-size: 30px;">A Field Experiment with Custom LLM</p>
 
-        </div>
+				 <p style="text-align: left; font-weight: 100;margin-top: 160px;">
+                     The 3 video stimuli in our field experiment are shown as follows:   
+
+				 </p>
+			</div>
 
 
-    </div>
 
-    <div class="uk-container uk-container-center container" id="content">
-        <style>.large-title {
-            font-size: 26px;
-        }
-        </style>
-        <div class="large-title">
-            <p style="margin: 0px 0; text-align: center;font-size: 30px;">Multimedia Appendices</p>
-        </div>
-
-        <div class="uk-grid-small" uk-grid>
-            <div class="uk-width-1-1">
-                <div class="content">
-                    <style>
-                        h3 {
-                            font-weight: bold;
-                            margin-top: 20px; /* 这里添加了顶部边距 */
-                        }
-
-                        .title {
-                            margin-top: 120px;
-                        }
-                    </style>
-
-<!--                    <h3 id="5">-->
-<!--                    </h3>-->
-<!--                    <div class="uk-grid-small" uk-grid>-->
-<!--                        <div class="uk-width-1-1" uk-lightbox="animation: slide">-->
-<!--                            <div style="max-width: 800px;margin:auto">-->
-<!--                                <a href="#" data-caption=""><img src=" " alt=""></a>-->
-<!--                            </div>-->
-
-<!--                        </div>-->
-<!--                    </div>-->
-
-<!--                    <style>-->
-<!--                        h3 {-->
-<!--                            font-weight: bold;-->
-<!--                        }-->
-<!--                    </style>-->
+ 
+        
                     <h3 id="1" class="title">Video 1: high agreeableness
                     </h3>
                     <div class="video">
