--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@
 
  
         
-                    <h3 id="1" class="title">Video 1: high agreeableness
+                    <h3 id="1" class="title">	<h4>Video 1: high agreeablene
+				</h4>
                     </h3>
                     <div class="video">
                         <iframe src="//player.bilibili.com/player.html?isOutside=true&aid=112912878338863&bvid=BV1wnYKe8EjP&cid=500001639855837&p=1&autoplay=0"
@@ -116,7 +117,9 @@
 
                     </div>
 
-                    <h3 id="2" class="title">Video 2: middle agreeableness
+                    <h3 id="2" class="title"><h4>Video 2: middle agreeableness
+				</h4>
+
 
                     </h3>
                     <div class="video">
@@ -126,7 +129,8 @@
 
                     </div>
 
-                    <h3 id="3" class="title">Video 3: low agreeableness
+                    <h3 id="3" class="title"> <h4>Video 3: low agreeableness
+				</h4>
 
                     </h3>
                     <div class="video">
