--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
  
         
-                    <h5 id="1" class="title">	<strong>Video 1: high agreeablene
+                    <h5 id="1" class="title">	<strong>Video 1: high agreeableness
 				</strong>
                     </h5>
                     <div class="video">
