--- a/index.html
+++ b/index.html
@@ -109,11 +109,15 @@
                     <h5 id="1" class="title">	<strong>Video 1: high agreeableness
 				</strong>
                     </h5>
-                    <div class="video">
+<!--                     <div class="video">
                      
 <iframe src="//player.bilibili.com/player.html?isOutside=true&aid=112912878338863&bvid=BV1wnYKe8EjP&cid=500001640403735&p=1&autoplay=0" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"></iframe>
 
-                    </div>
+                    </div> -->
+
+		<div class="video">
+    <video src="https://github.com/multimodal-agreeableness/multimodal-agreeableness.github.io/blob/main/media/1high_compressed.mp4" controls></video>
+</div>
 
                     <h5 id="2" class="title"><strong>Video 2: middle agreeableness
 				</strong>
@@ -126,6 +130,8 @@
 
 
                     </div>
+
+		
 
                     <h5 id="3" class="title"> <strong>Video 3: low agreeableness
 				</strong>
