--- a/index.html
+++ b/index.html
@@ -124,12 +124,12 @@
 
 
                     </h5>
-                    <div class="video">
-			    <iframe src="//player.bilibili.com/player.html?isOutside=true&aid=112914942002131&bvid=BV1uNaCeGEVv&cid=500001640405504&p=1&autoplay=0" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"></iframe>
-                    
-
-
-                    </div>
+<!--                     <div class="video">
+		<iframe src="//player.bilibili.com/player.html?isOutside=true&aid=112914942002131&bvid=BV1uNaCeGEVv&cid=500001640405504&p=1&autoplay=0" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"></iframe>
+                    </div> -->
+				<div class="video">
+    <video src="https://github.com/multimodal-agreeableness/multimodal-agreeableness.github.io/blob/main/media/2middle_compressed.mp4" controls></video>
+</div>
 
 		
 
@@ -137,11 +137,14 @@
 				</strong>
 
                     </h5>
-                    <div class="video">
+			<div class="video">
+    <video src="https://github.com/multimodal-agreeableness/multimodal-agreeableness.github.io/blob/main/media/3low_compressed.mp4" controls></video>
+</div>
+<!--                     <div class="video">
 			    <iframe src="//player.bilibili.com/player.html?isOutside=true&aid=112912878276452&bvid=BV16nYKebEQL&cid=500001640402918&p=1&autoplay=0" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"></iframe>
                       
 		    </div>
-
+ -->
                 </div>
 
 <!--                <h3 id="5">-->
