--- a/index.html
+++ b/index.html
@@ -115,9 +115,15 @@
 
                     </div> -->
 
-		<div class="video">
+<!-- 		<div class="video">
     <video src="https://github.com/multimodal-agreeableness/multimodal-agreeableness.github.io/blob/main/media/1high_compressed.mp4" controls></video>
-</div>
+</div> -->
+		<video width="480" height="264" controls>
+		 
+		<source type="video/mp4" src=https://github.com/multimodal-agreeableness/multimodal-agreeableness.github.io/blob/main/media/1high_compressed.mp4" >
+		 
+		</object>
+	</video>
 
                     <h5 id="2" class="title"><strong>Video 2: middle agreeableness
 				</strong>
