--- a/index.html
+++ b/index.html
@@ -118,12 +118,8 @@
 <!-- 		<div class="video">
     <video src="https://github.com/multimodal-agreeableness/multimodal-agreeableness.github.io/blob/main/media/1high_compressed.mp4" controls></video>
 </div> -->
-		<video width="480" height="264" controls>
-		 
-		<source type="video/mp4" src=https://github.com/multimodal-agreeableness/multimodal-agreeableness.github.io/blob/main/media/1high_compressed.mp4" >
-		 
-		</object>
-	</video>
+		<iframe width="560" height="315" src="https://github.com/multimodal-agreeableness/multimodal-agreeableness.github.io/blob/main/media/1high_compressed.mp4" frameborder="0" allowfullscreen></iframe>
+
 
                     <h5 id="2" class="title"><strong>Video 2: middle agreeableness
 				</strong>
