--- a/index.html
+++ b/index.html
@@ -109,6 +109,16 @@
                     <h5 id="1" class="title">	<strong>Video 1: high agreeableness
 				</strong>
                     </h5>
+
+
+		  <video width="640" height="360" controls>
+        <source src="media/1high_compressed.mp4" type="video/mp4">
+   
+ 
+    </video>
+
+
+		
 <!--                     <div class="video">
                      
 <iframe src="//player.bilibili.com/player.html?isOutside=true&aid=112912878338863&bvid=BV1wnYKe8EjP&cid=500001640403735&p=1&autoplay=0" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"></iframe>
