--- a/index.html
+++ b/index.html
@@ -111,13 +111,12 @@
                     </h5>
 
 
-		  <video width="640" height="360" controls>
-        <source src="media/1high_compressed.mp4" type="video/mp4">
-   
- 
-    </video>
+	 
 
-
+<video controls="" width="800" height="500" muted="" loop="" autoplay="">
+    <source src="media/1high_compressed.mp4" type="video/mp4">
+</video>
+		
 		
 <!--                     <div class="video">
                      
