--- a/index.html
+++ b/index.html
@@ -111,24 +111,15 @@
                     </h5>
 
 
-	 
-
-<video controls="" width="800" height="500" muted="" loop="" autoplay="">
-    <source src="media/1high_compressed.mp4" type="video/mp4">
-</video>
+	  [![Watch the video](THUMBNAIL)]("https://github.com/multimodal-agreeableness/multimodal-agreeableness.github.io/blob/main/media/1high_compressed.mp4") 
 		
-		
-<!--                     <div class="video">
-                     
-<iframe src="//player.bilibili.com/player.html?isOutside=true&aid=112912878338863&bvid=BV1wnYKe8EjP&cid=500001640403735&p=1&autoplay=0" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"></iframe>
-
-                    </div> -->
-
-<!-- 		<div class="video">
-    <video src="https://github.com/multimodal-agreeableness/multimodal-agreeableness.github.io/blob/main/media/1high_compressed.mp4" controls></video>
-</div> -->
-		<iframe width="560" height="315" src="https://github.com/multimodal-agreeableness/multimodal-agreeableness.github.io/blob/main/media/1high_compressed.mp4" frameborder="0" allowfullscreen></iframe>
-
+		<video controls="" width="800" height="500" muted="" loop="" autoplay="">
+		    <source src="https://github.com/multimodal-agreeableness/multimodal-agreeableness.github.io/blob/main/media/1high_compressed.mp4" type="video/mp4">
+		</video>
+				
+ 
+ 
+		 
 
                     <h5 id="2" class="title"><strong>Video 2: middle agreeableness
 				</strong>
