--- a/index.html
+++ b/index.html
@@ -111,11 +111,11 @@
                     </h5>
 
 
-	 		 [![Watch the video](THUMBNAIL)]("https://github.com/multimodal-agreeableness/multimodal-agreeableness.github.io/blob/main/media/1high_compressed.mp4") 
+	 		 [![Watch the video](THUMBNAIL)](https://github.com/multimodal-agreeableness/multimodal-agreeableness.github.io/blob/main/media/1high_compressed.mp4) 
 		
 	
  
-		 
+		 [![Watch the video]](https://github.com/multimodal-agreeableness/multimodal-agreeableness.github.io/blob/main/media/1high_compressed.mp4)
 
                     <h5 id="2" class="title"><strong>Video 2: middle agreeableness
 				</strong>
