--- a/index.html
+++ b/index.html
@@ -110,9 +110,11 @@
 				</strong>
                     </h5>
 
-
-	 		 [![Watch the video](THUMBNAIL)](https://github.com/multimodal-agreeableness/multimodal-agreeableness.github.io/blob/main/media/1high_compressed.mp4) 
+ <div class="video">
+		 [![Watch the video](THUMBNAIL)](https://github.com/multimodal-agreeableness/multimodal-agreeableness.github.io/blob/main/media/1high_compressed.mp4) 
 		
+                    </div> -->
+	 		
 	
  
 		 [![Watch the video]](https://github.com/multimodal-agreeableness/multimodal-agreeableness.github.io/blob/main/media/1high_compressed.mp4)
