--- a/index.html
+++ b/index.html
@@ -111,14 +111,12 @@
                     </h5>
 
  <div class="video">
-		 [![Watch the video](THUMBNAIL)](https://github.com/multimodal-agreeableness/multimodal-agreeableness.github.io/blob/main/media/1high_compressed.mp4) 
+		 [![Watch the video](THUMBNAIL)]("https://github.com/multimodal-agreeableness/multimodal-agreeableness.github.io/blob/main/media/1high_compressed.mp4") 
 		
                     </div> -->
 	 		
 	
- 
-		 [![Watch the video]](https://github.com/multimodal-agreeableness/multimodal-agreeableness.github.io/blob/main/media/1high_compressed.mp4)
-
+  
                     <h5 id="2" class="title"><strong>Video 2: middle agreeableness
 				</strong>
 
@@ -137,9 +135,9 @@
 				</strong>
 
                     </h5>
-			<div class="video">
-    <video src="https://github.com/multimodal-agreeableness/multimodal-agreeableness.github.io/blob/main/media/3low_compressed.mp4" controls></video>
-</div>
+				<video controls="" width="800" height="500" muted="" loop="" autoplay="">
+			<source src="https://github.com/multimodal-agreeableness/multimodal-agreeableness.github.io/blob/main/media/2middle_compressed.mp4" type="video/mp4">
+			</video>
 <!--                     <div class="video">
 			    <iframe src="//player.bilibili.com/player.html?isOutside=true&aid=112912878276452&bvid=BV16nYKebEQL&cid=500001640402918&p=1&autoplay=0" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"></iframe>
                       
