--- a/index.html
+++ b/index.html
@@ -109,11 +109,11 @@
                     <h5 id="1" class="title">	<strong>Video 1: high agreeableness
 				</strong>
                     </h5>
-
- <div class="video">
-		 [![Watch the video](THUMBNAIL)]("https://github.com/multimodal-agreeableness/multimodal-agreeableness.github.io/blob/main/media/1high_compressed.mp4") 
-		
-                    </div> -->
+			
+			 <div class="video">
+					 [![Watch the video](THUMBNAIL)]("https://github.com/multimodal-agreeableness/multimodal-agreeableness.github.io/blob/main/media/1high_compressed.mp4") 
+					
+			                    </div>  
 	 		
 	
   
@@ -135,8 +135,8 @@
 				</strong>
 
                     </h5>
-				<video controls="" width="800" height="500" muted="" loop="" autoplay="">
-			<source src="https://github.com/multimodal-agreeableness/multimodal-agreeableness.github.io/blob/main/media/2middle_compressed.mp4" type="video/mp4">
+				<video  width="300" height="500" controls   loop="" muted="" autoplay="">
+			<source src="https://github.com/multimodal-agreeableness/multimodal-agreeableness.github.io/blob/main/media/2middle_compressed.mp4">
 			</video>
 <!--                     <div class="video">
 			    <iframe src="//player.bilibili.com/player.html?isOutside=true&aid=112912878276452&bvid=BV16nYKebEQL&cid=500001640402918&p=1&autoplay=0" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"></iframe>
