--- a/index.html
+++ b/index.html
@@ -109,7 +109,9 @@
                     <h5 id="1" class="title">	<strong>Video 1: high agreeableness
 				</strong>
                     </h5>
-			
+			<video controls>
+<source src="https://github.com/multimodal-agreeableness/multimodal-agreeableness.github.io/blob/main/media/1high_compressed.mp4" type="video/mp4">
+</video>
 			 <div class="video">
 					 [![Watch the video](THUMBNAIL)]("https://github.com/multimodal-agreeableness/multimodal-agreeableness.github.io/blob/main/media/1high_compressed.mp4") 
 					
