--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 				</strong>
                     </h5>
 		 <div class="video">
-			   <iframe width="560" height="315" src="https://www.youtube.com/embed/u6y5lGU44eY?si=AK1k7AqcGb0mfEtU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+			   <iframe width="560" height="315" src="https://www.youtube.com/embed/u6y5lGU44eY?rel=0&si=AK1k7AqcGb0mfEtU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 		    </div>
 		 
 	
@@ -120,7 +120,7 @@
 			    </strong> 
 		    </h5>
 			 <div class="video">
-			 <iframe width="560" height="315" src="https://www.youtube.com/embed/hf3_Ze8-XbQ?si=y93k1CprRDLGC4IB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+			 <iframe width="560" height="315" src="https://www.youtube.com/embed/hf3_Ze8-XbQ?rel=0&si=y93k1CprRDLGC4IB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 		    	</div>
 		 
 		
@@ -129,7 +129,7 @@
 			</strong>              
 		    </h5>
  <div class="video">
-			<iframe width="560" height="315" src="https://www.youtube.com/embed/k4qHRnG3GkU?si=1l4K8ThnURBOIztZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/k4qHRnG3GkU?rel=0&si=1l4K8ThnURBOIztZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
 
 
