--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 <p style="text-align: left; font-weight: 100; margin-top: 160px; font-size: 24px;">The 3 video stimuli in our field experiment are shown as follows:</p>
             </div>
 
-            <!-- 高同理心视频 -->
+            <!-- 高视频 -->
             <h5 id="1" class="title">
                 <p style="font-size: 20px;"><strong>Video 1: High agreeableness</strong></p>
             </h5>
@@ -171,8 +171,7 @@
             <div class="col2">
                 <!-- 英文版 -->
                 <div class="video">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/<iframe width="560" height="315" src="https://www.youtube.com/embed/kC1kl1NeIcI?rel=0&si=XDcsimFaf-smqIht" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                    <div class="small-title">(English version)</div>
+                 <iframe width="560" height="315" src="https://www.youtube.com/embed/kC1kl1NeIcI?rel=0&si=x4zWQBvk4nt7x0GB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>                  <div class="small-title">(English version)</div>
                 </div>
 
                 <!-- 中文版 -->
