--- a/index.html
+++ b/index.html
@@ -152,13 +152,13 @@
                 <!-- 英文版 -->
            
                 <div class="video">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/etp7jWKOEVg?rel=0&si=sAfcMiCynC2pkaw5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/OZbZG2EnJiQ?rel=0&si=SekbpzSeg7Hzsis8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     <div class="small-title">(English version)</div>
                 </div>
 
                 <!-- 中文版 -->
                 <div class="video">
-                 <iframe width="560" height="315" src="https://www.youtube.com/embed/Dn6WW1b80lU?rel=0&si=kfGigav0xYFui6X7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                 <iframe width="560" height="315" src="https://www.youtube.com/embed/aj5t2el4ydI?rel=0&si=LPh8MjeDcPN9DQcF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     <div class="small-title">(Chinese version)</div>
                 </div>
             </div>
@@ -171,12 +171,12 @@
             <div class="col2">
                 <!-- 英文版 -->
                 <div class="video">
-                 <iframe width="560" height="315" src="https://www.youtube.com/embed/kC1kl1NeIcI?rel=0&si=x4zWQBvk4nt7x0GB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>                  <div class="small-title">(English version)</div>
+                 <iframe width="560" height="315" src="https://www.youtube.com/embed/wfn895R7e40?rel=0&si=XSmU96u6Te9q2Lt0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>                  <div class="small-title">(English version)</div>
                 </div>
 
                 <!-- 中文版 -->
                 <div class="video">
-               <iframe width="560" height="315" src="https://www.youtube.com/embed/ihqT_XC7arM?rel=0&si=VeeYsqcvSopOiN3C" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+               <iframe width="560" height="315" src="https://www.youtube.com/embed/I97QYxXXXoU?rel=0&si=qhv6nrUoqIlnJMsV" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 
                     <div class="small-title">(Chinese version)</div>
@@ -191,13 +191,13 @@
             <div class="col2">
                 <!-- 英文版 -->
                 <div class="video">
-               <iframe width="560" height="315" src="https://www.youtube.com/embed/ceFt4i_yqXw?rel=0&si=-ddnWR774BHsbKu2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+               <iframe width="560" height="315" src="https://www.youtube.com/embed/dLRbqqFcjYM?rel=0&si=OdJie3Zh8sY6DnSZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     <div class="small-title">(English version)</div>
                 </div>
 
                 <!-- 中文版 -->
                 <div class="video">
-                  <iframe width="560" height="315" src="https://www.youtube.com/embed/uh5yoiUveAU?rel=0&si=UDtMfDJnoTDQlG6E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                  <iframe width="560" height="315" src="https://www.youtube.com/embed/MC489Mg9LMc?rel=0&si=EZ5RMvKIaSHDjYlc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 
                     <div class="small-title">(Chinese version)</div>
